Themes: Fixed text-color on Rounded Corner theme to be more visible.

--- a/themes-dist/RoundedCorners/Heading_3.css
+++ b/themes-dist/RoundedCorners/Heading_3.css
@@ -11,7 +11,7 @@
     border: 1px solid #979797;
     padding: 6px;
     text-align: left;
-    color: #fff;
+    color: #222;
     font-size: 110%;
     padding-left: 10px;
     margin: 0px;
